discussion/kv_engine/168586/168586_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Move ItemsToFlush & AggregatedFlushStats from VBucket

... and into vbucket_types.h. This further reduces coupling with
vbucket.h; so users of the aforementioned types don't necessarily need
to include the entirity of vbucket.h.

Impact on header cost is small reduction in instances and average include time:

Before:
    kv_engine/engines/ep/src/vbucket.h (included 73 times, avg 419 ms), included via:

After:
    kv_engine/engines/ep/src/vbucket.h (included 71 times, avg 407 ms), included via:

Change-Id: I46c1f00c51c25acb6348cbc561e6192ba68884d2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 09:34:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 10:47:29.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14751/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:28: error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:39: error: use of undeclared identifier "EventDrivenDurabilityTimeoutIface" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:17: error: type-id cannot have a name [clang-diagnostic-error]
                VBucket&)>;
                ^~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:24: error: expected ")" [clang-diagnostic-error]
                VBucket&)>;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:73: note: to match this "("
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:26: error: expected ";" after alias declaration [clang-diagnostic-error]
                VBucket&)>;
                         ^
                         ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:66:17: error: use of undeclared identifier "queued_item" [clang-diagnostic-error]
    std::vector<queued_item> items;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:70:5: error: unknown type name "CheckpointType" [clang-diagnostic-error]
    CheckpointType checkpointType = CheckpointType::Memory;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:73:5: error: unknown type name "UniqueFlushHandle" [clang-diagnostic-error]
    UniqueFlushHandle flushHandle;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14751/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:56:28:
error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42729/ : FAILURE

Timeout of a CTest test 420/420 Test  #59: ep-engine_ep_unit_tests.NotifyTest ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42729/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24828/ : FAILURE

Timeout of a CTest test [2022-01-12T10:30:19.037Z] 422/422 Test  #63: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24828/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16706/ : FAILURE

Timeout of a CTest test [2022-01-12T10:13:24.377Z] 438/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17499/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16415/ : FAILURE

Timeout of a CTest test [2022-01-12T10:18:29.395Z] 422/422 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4454/ : FAILURE

Timeout of a CTest test [2022-01-12T10:17:02.924Z]  41/441 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4454/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15559/ : FAILURE

Timeout of a CTest test [2022-01-12T09:53:30.132Z] 297/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15559/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13593/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36207/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4396/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
